<resources>
    <string name="app_name">Recipecraft</string>
    <string name="base_domain">https:/teamdroid.ru/api/</string>
    <string name="menu_refresh">Refresh</string>
    <string name="available_section_next_version_text">Раздел будет доступен в следующих версиях</string>
    <string name="available_feature_next_version_text">Функционал будет доступен в следующих версиях</string>
    <string name="fragment_craft_title">Создание рецепта</string>
    <string name="fragment_favorites_title">Избранное</string>
    <string name="fragment_profile_title">Профиль</string>
    <string name="fragment_recipes_title">Рецепты</string>
    <string name="ok">Ок</string>
    <string name="first_startup_title">Внимание</string>
    <string name="first_startup_message">Спасибо за установку нашего приложения. \n\nВ данный момент проект находится в стадии альфы версии и не весь функционал может работать корректно. \n\nПожалуйста, в случае ошибки или пожелания дайте нам знать через обратную связь в верхнем правом углу экрана.</string>
    <string name="report_title">Если у вас есть какие-то замечания или пожелания, пожалуйста, заполните анкету внизу</string>
    <string name="your_name_text">Ваше имя:</string>
    <string name="your_email_text">Ваш e-mail:</string>
    <string name="your_feedback_text">Ваше сообщение:</string>
    <string name="send_feedback_button_text">Отправить</string>
    <string name="fragment_report_title">Обратная связь</string>
    <string name="error_input_text">Введите все поля</string>
    <string name="thanks_feedback">Спасибо за ваше письмо</string>
    <string name="error_feedback">К сожалению, ваще сообщение не отправилось. Отправьте заново через несколько минут.</string>
    <string name="watch_button">Посмотреть</string>
    <string name="favoriteButton">В избранное</string>
    <string name="language">ru</string>
    <string name="info_recipes">%s ингредиентов(а) | %s порции | %s минут</string>
    <string name="category_recipes">%s</string>
    <string name="placeholder_detail_recipe">Detail Recipe</string>
    <string name="save">Сохранить</string>
    <string name="Delete">Удалить</string>
    <string name="error_remote_load">Не удалось обновить данные из сервера</string>
    <string name="bookmarked">Добавлено в избранное</string>
    <string name="unbookmark_text">Удалено из избранного</string>
    <string name="send_report_message_text">Идет отправка сообщения</string>
    <string name="please_wait_text">Пожалуйста, подождите</string>
    <string name="close_text">Закрыть</string>
    <string name="ingredients_text">Ингредиенты</string>
    <string name="information_detail_recipe_text">Время: %d мин. | Порций: %d \nИнгредиентов: %s | Инструкций: %s</string>
    <string name="instructions_title_text">Инструкции</string>
    <string name="instructions_text">%d) %s</string>
    <string name="select_ingredients_text_btn">Выбери ингредиенты</string>
    <string name="select_ingredient_text">Выбрать</string>
    <string name="ingredienets_not_found">Ничего не найдено</string>
    <string name="selected_ingredients_text">Выбранные ингредиенты</string>
    <string name="relevant_recipes_text">Подходящие рецепты</string>
    <string name="cancel">Отменить</string>
    <string name="list_ingredients_text">Список ингредиентов</string>
    <string name="clear_text">clear</string>
    <string name="empty_recipes">Нет рецептов</string>
    <string name="empty_ingredients">Нет выбранных ингредиентов</string>
    <string name="not_found_text">Ничего не найдено</string>
    <string name="ingredients_content_description">ingredients</string>
    <string name="time_content_description">time_content_description</string>
    <string name="portion_content_description">portion</string>
    <string name="image_content_description">image</string>
    <string name="favorite_content_description">favorite</string>
    <string name="ingredients_info_text">%s \n ингред</string>
    <string name="time_info_text">%s \n минут</string>
    <string name="portion_info_text">%s \n порции</string>
    <string name="instruction_title_header">инструкция</string>
    <string name="ingredient_title_header">ингредиенты</string>
    <string name="measure_text"> %s %s</string>
    <string name="no_favorite_recipes_text">Пока нет ни одного рецепта в избранном :(</string>
    <string name="star_inactive_content_description">star_inactive</string>
    <string name="menu_sign_in">Войти</string>
    <string name="menu_report">Обратная связь</string>
    <string name="menu_logout">Выйти</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="user_logout_text">Вы вышли из своего аккаунта</string>
    <string name="settings_application_text">Настройки приложения</string>
    <string name="sign_in_text">Войти</string>
    <string name="about_application_text">О приложении</string>
    <string name="feedback_text">Обратная связь</string>
    <string name="fragment_about_title">О приложении</string>
    <string name="fragment_settings_application_title">Настройки приложения</string>
    <string name="search">Поиск</string>
    <string name="tag_settings">SETTINGS</string>
    <string name="tag_about">ABOUT</string>
    <string name="tag_feedback">FEEDBACK</string>
    <string name="tag_favorite">FAVORITE</string>
    <string name="tag_sign_out">SIGN_OUT</string>
    <string name="tag_sign_in">SIGN_IN</string>
    <string name="found_recipes">Найдено %d рецепта</string>

    <string name="about_version_app">Текущая версия: %s</string>
    <string name="sign_out_text">Выйти из аккаунта</string>
    <string name="tag_navigation_craft">CRAFT</string>
    <string name="tag_navigation_recipe">RECIPE</string>
    <string name="tag_navigation_profile">PROFILE</string>
    <string name="error_auth_text">Ошибка авторизации</string>
    <string name="not_authorization_client_text">Неавторизованный</string>
    <string name="show_notifications_text">Показывать уведомления</string>

    <string-array name="sort_recipes">
        <item>Рецепты (Cначала новые)</item>
        <item>Рецепты (По порциям)</item>
        <item>Рецепты (По ингредиентам)</item>
        <item>Рецепты (По времени)</item>
    </string-array>

</resources>
