<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_smedium"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/max_width_image"
                    android:layout_height="@dimen/max_height_image"
                    android:background="#A5BDBDBD"
                    android:contentDescription="@string/image_content_description"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/size_small"
                    android:layout_marginEnd="@dimen/size_small"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="start|center"
                    android:maxWidth="@dimen/max_width_text"
                    android:minWidth="@dimen/max_width_text"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/imageView"
                    app:layout_constraintRight_toLeftOf="@id/ingredientsConstraintLayout"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ingredientsConstraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/dark_orange_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/timeConstraintLayout"
                    app:layout_constraintStart_toEndOf="@+id/titleTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed">

                    <TextView
                        android:id="@+id/ingredientsTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/textWhite"
                        app:layout_constraintBottom_toTopOf="@+id/ingredientsImageView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <ImageView
                        android:id="@+id/ingredientsImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_xsmall"
                        android:contentDescription="@string/ingredients_content_description"
                        android:src="@drawable/ic_ingredient"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ingredientsTextView" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/timeConstraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/bright_orange_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/portionConstraintLayout"
                    app:layout_constraintStart_toEndOf="@+id/ingredientsConstraintLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed">

                    <TextView
                        android:id="@+id/timeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/textWhite"
                        app:layout_constraintBottom_toTopOf="@+id/timeImageView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <ImageView
                        android:id="@+id/timeImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_xsmall"
                        android:contentDescription="@string/time_content_description"
                        android:src="@drawable/ic_time"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/timeTextView" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/portionConstraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/light_orange_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/timeConstraintLayout"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed">

                    <TextView
                        android:id="@+id/portionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/textWhite"
                        app:layout_constraintBottom_toTopOf="@+id/portionImageView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <ImageView
                        android:id="@+id/portionImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_xsmall"
                        android:contentDescription="@string/portion_content_description"
                        android:src="@drawable/ic_portions"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/portionTextView" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/favoriteImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/size_ssmedium"
            android:layout_marginEnd="@dimen/size_smedium"
            android:contentDescription="@string/favorite_content_description"
            android:src="@drawable/ic_star_inactive" />
    </LinearLayout>

</LinearLayout>